--- a/fixture/zomes/foo/Cargo.toml
+++ b/fixture/zomes/foo/Cargo.toml
@@ -10,5 +10,5 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 serde = "1"
-hdi = "0.2.3-beta-rc.0"
-hdk = "0.1.3-beta-rc.1"
+hdi = "0.2.1"
+hdk = "0.1.1"
